go-runner/src/builder/snapshots/go_runner__builder__patcher__tests__import_at_end_of_block.snap
---
source: src/builder/patcher.rs
expression: result
---
package main

import (
    "fmt"
    "strings"
    testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"
)
