go-runner/src/builder/snapshots/go_runner__builder__patcher__tests__import_with_comments.snap
---
source: src/builder/patcher.rs
expression: result
---
package main

import (
    "fmt"
    testing "github.com/CodSpeedHQ/codspeed-go/compat/testing" // for unit tests
    "strings"
)
