go-runner/src/builder/snapshots/go_runner__builder__patcher__tests__mixed_import_styles.snap
---
source: src/builder/patcher.rs
expression: result
---
package main

import testing "github.com/CodSpeedHQ/codspeed-go/compat/testing"

import (
    "fmt"
    "something"
)
